# protoc-gen-php

./: .gitignore  .travis.yml  LICENCE  Makefile  Makefile.am  README.md  addressbook2.proto  addressbook3.proto  configure.ac  install-protobuf.sh  php_field.cc  php_generator.cc  php_generator.h  php_message.cc  php_method.cc  php_options.proto  php_read.cc  php_util.cc  php_util.h  protoc-gen-php.cc  protocolbuffers.inc.php  test.php  util.cc  util.h
reference_app/: Makefile.am  reference.cc
src/: Makefile.am  config.h  config.h.in  php_enum.cc  php_field.cc  php_generator.cc  php_generator.h  php_message.cc  php_method.cc  php_options.proto  php_service.cc  php_size.cc  php_tostring.cc  php_util.cc  php_util.h  php_write.cc  protoc-gen-php.cc  strutil.cc  strutil.h
tests/: Makefile.am  composer.json  phpunit_base.php  phpunit_utils.php  protocolbuffers_test.php  varints_benchmark.php
